--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    <body class="collapse-sidebar">
 
   <aside class="sidebar position-fixed h-100 position-relative d-none d-md-block">
-    <a class="navbar-brand" href="#"><img class="img-fluid aside-logo logo mt-xl" src="images/GetViral.svg"
+    <a class="navbar-brand" href="#"><img class="img-fluid aside-logo logo mt-xl" src="./../../assets/images/GetViral.svg"
         alt=""></a>
 
     <ul class="sidebar__lists list-unstyled">
@@ -29,20 +29,20 @@
               d="M19.762 18.6122L15.1007 13.9509C14.7831 13.6333 14.2687 13.6333 13.9511 13.9509C13.6335 14.2683 13.6335 14.7832 13.9511 15.1005L18.6124 19.7618C18.7711 19.9206 18.979 20 19.1872 20C19.395 20 19.6031 19.9206 19.762 19.7618C20.0796 19.4444 20.0796 18.9295 19.762 18.6122Z"
               fill="#B5B5B5" />
         </span><input class="sidebar__input side-bar__name mb-0" placeholder="Search"></li>
-      <li class="my-4 py-2 py-xl-3 my-3 d-flex align-items-center"><span class="sidebar__icon"><svg
-            class="dashboard-icon" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false"
+      <li class="my-4 py-2 py-xl-3 my-3 d-flex align-items-center"><span class="sidebar__icon sidebar__icon-active"><svg
+            class="dashboard-icon icon-active" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false"
             preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24">
             <path
               d="M4 13h6c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1H4c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1zm0 8h6c.55 0 1-.45 1-1v-4c0-.55-.45-1-1-1H4c-.55 0-1 .45-1 1v4c0 .55.45 1 1 1zm10 0h6c.55 0 1-.45 1-1v-8c0-.55-.45-1-1-1h-6c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1zM13 4v4c0 .55.45 1 1 1h6c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1h-6c-.55 0-1 .45-1 1z" />
-          </svg></span><a href="#" class="pl-3 side-bar__name sidebar__link mb-0">Dashboard</a></li>
+          </svg></span><a href="#" class="pl-3 side-bar__name sidebar__link mb-0 sidebar__link-active nav-link-active">Dashboard</a></li>
 
 
       <li class="my-4 py-2 py-xl-3 my-3 d-flex align-items-center">
-        <span class="sidebar__icon sidebar__icon-active"><svg xmlns="http://www.w3.org/2000/svg" class="dashboard-icon icon-active" aria-hidden="true"
+        <span class="sidebar__icon"><svg xmlns="http://www.w3.org/2000/svg" class="dashboard-icon" aria-hidden="true"
             focusable="false" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24">
             <path
               d="M10 4h10a1 1 0 0 1 0 2H10a1 1 0 1 1 0-2zm0 7h10a1 1 0 0 1 0 2H10a1 1 0 0 1 0-2zm0 7h10a1 1 0 0 1 0 2H10a1 1 0 0 1 0-2zM5 7a2 2 0 1 1 0-4a2 2 0 0 1 0 4zm0 7a2 2 0 1 1 0-4a2 2 0 0 1 0 4zm0 7a2 2 0 1 1 0-4a2 2 0 0 1 0 4z" />
-          </svg></span><a href="#" class="sidebar__link pl-3 side-bar__name mb-0 sidebar__link-active nav-link-active">Campaigns</a></li>
+          </svg></span><a href="#" class="sidebar__link pl-3 side-bar__name mb-0">Publisher list</a></li>
 
 
       <li class="my-4 py-2 py-xl-3 my-3 d-flex align-items-center"><span class="sidebar__icon"><svg
@@ -81,7 +81,7 @@
   <header class="d-md-none header sticky-top">
     <nav class="navbar navbar-expand-md navbar-light navbar-bg-custom">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img class="img-fluid logo" src="images/GetViral.svg" alt=""></a>
+        <a class="navbar-brand" href="#"><img class="img-fluid logo" src="./../../assets/images/GetViral.svg" alt=""></a>
         <button class="navbar-toggler px-0" type="button" data-toggle="collapse" data-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -94,20 +94,20 @@
               <li class="nav-item py-1 d-flex align-items-center">
                 <!--FIXME: USE 'icon-active' ON SVG ICON TO MAKE IT ACTIVE-->
                 <!--FIXME: USE 'nav-link-active' ON link (a) tag TO MAKE IT ACTIVE-->
-                <svg class="pr-3 dashboard-icon" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false"
+                <svg class="pr-3 dashboard-icon  icon-active" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false"
                   preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24">
                   <path
                     d="M4 13h6c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1H4c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1zm0 8h6c.55 0 1-.45 1-1v-4c0-.55-.45-1-1-1H4c-.55 0-1 .45-1 1v4c0 .55.45 1 1 1zm10 0h6c.55 0 1-.45 1-1v-8c0-.55-.45-1-1-1h-6c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1zM13 4v4c0 .55.45 1 1 1h6c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1h-6c-.55 0-1 .45-1 1z" />
                 </svg>
-                <a class="nav-link" href="#">Dashboard</a>
+                <a class="nav-link nav-link-active" href="#">Dashboard</a>
               </li>
               <li class="nav-item py-1 d-flex align-items-center">
-                <svg xmlns="http://www.w3.org/2000/svg" class="pr-3 dashboard-icon  icon-active" aria-hidden="true" focusable="false"
+                <svg xmlns="http://www.w3.org/2000/svg" class="pr-3 dashboard-icon" aria-hidden="true" focusable="false"
                   preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24">
                   <path
                     d="M10 4h10a1 1 0 0 1 0 2H10a1 1 0 1 1 0-2zm0 7h10a1 1 0 0 1 0 2H10a1 1 0 0 1 0-2zm0 7h10a1 1 0 0 1 0 2H10a1 1 0 0 1 0-2zM5 7a2 2 0 1 1 0-4a2 2 0 0 1 0 4zm0 7a2 2 0 1 1 0-4a2 2 0 0 1 0 4zm0 7a2 2 0 1 1 0-4a2 2 0 0 1 0 4z" />
                 </svg>
-                <a class="nav-link nav-link-active" href="#">Campaign</a>
+                <a class="nav-link" href="#">Publisher list</a>
               </li>
               <li class="nav-item  d-flex align-items-center py-1">
                 <svg xmlns="http://www.w3.org/2000/svg" class="pr-3 dashboard-icon" aria-hidden="true"
