pr commit; states

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    <body class="collapse-sidebar">
 
   <aside class="sidebar position-fixed h-100 position-relative d-none d-md-block">
-    <a class="navbar-brand" href="#"><img class="img-fluid aside-logo logo mt-xl" src="./../../assets/images/GetViral.svg"
+    <a class="navbar-brand" href="#"><img class="img-fluid aside-logo logo mt-xl" src="images/GetViral.svg"
         alt=""></a>
 
     <ul class="sidebar__lists list-unstyled">
@@ -81,7 +81,7 @@
   <header class="d-md-none header sticky-top">
     <nav class="navbar navbar-expand-md navbar-light navbar-bg-custom">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img class="img-fluid logo" src="./../../assets/images/GetViral.svg" alt=""></a>
+        <a class="navbar-brand" href="#"><img class="img-fluid logo" src="images/GetViral.svg" alt=""></a>
         <button class="navbar-toggler px-0" type="button" data-toggle="collapse" data-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -236,7 +236,7 @@
           <div class="row">
             <div class="col px-0">
               <h1>$100.00</h1>
-              <a class="d-flex align-items-center"><i class="d-none d-sm-block fas fa-2x fa-eye mr-3"></i><i class="d-sm-none fas fa-eye mr-2"></i> Hide Balance</a>
+              <!-- <a class="d-flex align-items-center"><i class="d-none d-sm-block fas fa-2x fa-eye mr-3"></i><i class="d-sm-none fas fa-eye mr-2"></i> Hide Balance</a> -->
             </div>
             <div class="col px-0 d-flex justify-content-end">
               <button class="btn btn-primary btn-sm">Cashout Funds</button>
@@ -413,7 +413,7 @@
    
                </thead>
    
-               <tbody>
+               <<tbody>
    
                  <tr>
                    <td>
@@ -434,8 +434,8 @@
                  <tr>
                    <td>
                      <div class="custom-control custom-switch">
-                       <input type="checkbox" class="custom-control-input check-complete" id="customSwitch1">
-                       <label class="custom-control-label check-complete" for="customSwitch1">Completed</label>
+                       <input type="checkbox" class="custom-control-input check-complete" id="customSwitch2">
+                       <label class="custom-control-label check-complete" for="customSwitch2">Completed</label>
                      </div>
                    </td>
                    <td>Coca Cola</td>
@@ -450,8 +450,8 @@
                  <tr>
                    <td>
                      <div class="custom-control custom-switch">
-                       <input type="checkbox" class="custom-control-input check-complete" id="customSwitch1">
-                       <label class="custom-control-label check-complete" for="customSwitch1">Completed</label>
+                       <input type="checkbox" class="custom-control-input check-complete" id="customSwitch3">
+                       <label class="custom-control-label check-complete" for="customSwitch3">Completed</label>
                      </div>
                    </td>
                    <td>Coca Cola</td>
@@ -466,8 +466,8 @@
                  <tr>
                    <td>
                      <div class="custom-control custom-switch">
-                       <input type="checkbox" class="custom-control-input check-complete" id="customSwitch1">
-                       <label class="custom-control-label check-complete" for="customSwitch1">Completed</label>
+                       <input type="checkbox" class="custom-control-input check-complete" id="customSwitch4">
+                       <label class="custom-control-label check-complete" for="customSwitch4">Completed</label>
                      </div>
                    </td>
                    <td>Coca Cola</td>
@@ -482,8 +482,24 @@
                  <tr>
                    <td>
                      <div class="custom-control custom-switch">
-                       <input type="checkbox" class="custom-control-input check-complete" id="customSwitch1">
-                       <label class="custom-control-label check-complete" for="customSwitch1">Completed</label>
+                       <input type="checkbox" class="custom-control-input check-complete" id="customSwitch5">
+                       <label class="custom-control-label check-complete" for="customSwitch5">Completed</label>
+                     </div>
+                   </td>
+                   <td>Coca Cola</td>
+                   <td>0001</td>
+                   <td>Facebook</td>
+                   <td>$2000</td>
+                   <td>50200</td>
+                   <td>5%</td>
+                   <td>$1500</td>
+                 </tr>
+   
+                 <tr>
+                   <td>
+                     <div class="custom-control custom-switch"
+                       <input type="checkbox" class="custom-control-input check-complete" id="customSwitch6">
+                       <label class="custom-control-label check-complete" for="customSwitch6">Completed</label>
                      </div>
                    </td>
                    <td>Coca Cola</td>
@@ -498,8 +514,8 @@
                  <tr>
                    <td>
                      <div class="custom-control custom-switch">
-                       <input type="checkbox" class="custom-control-input check-complete" id="customSwitch1">
-                       <label class="custom-control-label check-complete" for="customSwitch1">Completed</label>
+                       <input type="checkbox" class="custom-control-input check-complete" id="customSwitch7">
+                       <label class="custom-control-label check-complete" for="customSwitch7">Completed</label>
                      </div>
                    </td>
                    <td>Coca Cola</td>
@@ -514,8 +530,8 @@
                  <tr>
                    <td>
                      <div class="custom-control custom-switch">
-                       <input type="checkbox" class="custom-control-input check-complete" id="customSwitch1">
-                       <label class="custom-control-label check-complete" for="customSwitch1">Completed</label>
+                       <input type="checkbox" class="custom-control-input check-complete" id="customSwitch8">
+                       <label class="custom-control-label check-complete" for="customSwitch8">Completed</label>
                      </div>
                    </td>
                    <td>Coca Cola</td>
@@ -530,8 +546,8 @@
                  <tr>
                    <td>
                      <div class="custom-control custom-switch">
-                       <input type="checkbox" class="custom-control-input check-complete" id="customSwitch1">
-                       <label class="custom-control-label check-complete" for="customSwitch1">Completed</label>
+                       <input type="checkbox" class="custom-control-input check-complete" id="customSwitch9">
+                       <label class="custom-control-label check-complete" for="customSwitch9">Completed</label>
                      </div>
                    </td>
                    <td>Coca Cola</td>
@@ -546,24 +562,8 @@
                  <tr>
                    <td>
                      <div class="custom-control custom-switch">
-                       <input type="checkbox" class="custom-control-input check-complete" id="customSwitch1">
-                       <label class="custom-control-label check-complete" for="customSwitch1">Completed</label>
-                     </div>
-                   </td>
-                   <td>Coca Cola</td>
-                   <td>0001</td>
-                   <td>Facebook</td>
-                   <td>$2000</td>
-                   <td>50200</td>
-                   <td>5%</td>
-                   <td>$1500</td>
-                 </tr>
-   
-                 <tr>
-                   <td>
-                     <div class="custom-control custom-switch">
-                       <input type="checkbox" class="custom-control-input check-complete" id="customSwitch1">
-                       <label class="custom-control-label check-complete" for="customSwitch1">Completed</label>
+                       <input type="checkbox" class="custom-control-input check-complete" id="customSwitch10">
+                       <label class="custom-control-label check-complete" for="customSwitch10">Completed</label>
                      </div>
                    </td>
                    <td>Coca Cola</td>
