pr commit; states

--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
    
                </thead>
    
-               <<tbody>
+               <tbody>
    
                  <tr>
                    <td>
