--- a/index.html
+++ b/index.html
@@ -402,12 +402,12 @@
    
                  <tr>
                    <th scope="col">STATUS</th>
-                   <th scope="col">CLIENT.NAME</th>
-                   <th scope="col">ID</th>
+                   <th scope="col">CLIENT NAME</th>
+                   <th scope="col">CATEGORY</th>
                    <th scope="col">PLATFORM</th>
-                   <th scope="col">IMPRESSION</th>
-                   <th scope="col">ENGAGEMENTS</th>
-                   <th scope="col">CTR</th>
+                   <th scope="col">QUANTITY</th>
+                   <th scope="col">SOCIAL MEDIA LINK</th>
+                   <th scope="col">END DATE</th>
                    <th scope="col">EARNINGS</th>
                  </tr>
    
@@ -423,11 +423,11 @@
                      </div>
                    </td>
                    <td>Coca Cola</td>
-                   <td>0001</td>
+                   <td>Business</td>
                    <td>Facebook</td>
-                   <td>$2000</td>
-                   <td>50200</td>
-                   <td>5%</td>
+                   <td>14</td>
+                   <td>twitter.com/tweet</td>
+                   <td>06-07-2020</td>
                    <td>$1500</td>
                  </tr>
                  
@@ -439,11 +439,11 @@
                      </div>
                    </td>
                    <td>Coca Cola</td>
-                   <td>0001</td>
+                   <td>Business</td>
                    <td>Facebook</td>
-                   <td>$2000</td>
-                   <td>50200</td>
-                   <td>5%</td>
+                   <td>14</td>
+                   <td>twitter.com/tweet</td>
+                   <td>06-07-2020</td>
                    <td>$1500</td>
                  </tr>
    
@@ -455,11 +455,11 @@
                      </div>
                    </td>
                    <td>Coca Cola</td>
-                   <td>0001</td>
+                   <td>Business</td>
                    <td>Facebook</td>
-                   <td>$2000</td>
-                   <td>50200</td>
-                   <td>5%</td>
+                   <td>14</td>
+                   <td>twitter.com/tweet</td>
+                   <td>06-07-2020</td>
                    <td>$1500</td>
                  </tr>
    
@@ -471,11 +471,11 @@
                      </div>
                    </td>
                    <td>Coca Cola</td>
-                   <td>0001</td>
+                   <td>Business</td>
                    <td>Facebook</td>
-                   <td>$2000</td>
-                   <td>50200</td>
-                   <td>5%</td>
+                   <td>14</td>
+                   <td>twitter.com/tweet</td>
+                   <td>06-07-2020</td>
                    <td>$1500</td>
                  </tr>
    
@@ -487,11 +487,11 @@
                      </div>
                    </td>
                    <td>Coca Cola</td>
-                   <td>0001</td>
+                   <td>Business</td>
                    <td>Facebook</td>
-                   <td>$2000</td>
-                   <td>50200</td>
-                   <td>5%</td>
+                   <td>14</td>
+                   <td>twitter.com/tweet</td>
+                   <td>06-07-2020</td>
                    <td>$1500</td>
                  </tr>
    
@@ -503,11 +503,11 @@
                      </div>
                    </td>
                    <td>Coca Cola</td>
-                   <td>0001</td>
+                   <td>Business</td>
                    <td>Facebook</td>
-                   <td>$2000</td>
-                   <td>50200</td>
-                   <td>5%</td>
+                   <td>14</td>
+                   <td>twitter.com/tweet</td>
+                   <td>06-07-2020</td>
                    <td>$1500</td>
                  </tr>
    
@@ -519,11 +519,11 @@
                      </div>
                    </td>
                    <td>Coca Cola</td>
-                   <td>0001</td>
+                   <td>Business</td>
                    <td>Facebook</td>
-                   <td>$2000</td>
-                   <td>50200</td>
-                   <td>5%</td>
+                   <td>14</td>
+                   <td>twitter.com/tweet</td>
+                   <td>06-07-2020</td>
                    <td>$1500</td>
                  </tr>
    
@@ -535,11 +535,11 @@
                      </div>
                    </td>
                    <td>Coca Cola</td>
-                   <td>0001</td>
+                   <td>Business</td>
                    <td>Facebook</td>
-                   <td>$2000</td>
-                   <td>50200</td>
-                   <td>5%</td>
+                   <td>14</td>
+                   <td>twitter.com/tweet</td>
+                   <td>06-07-2020</td>
                    <td>$1500</td>
                  </tr>
    
@@ -551,11 +551,11 @@
                      </div>
                    </td>
                    <td>Coca Cola</td>
-                   <td>0001</td>
+                   <td>Business</td>
                    <td>Facebook</td>
-                   <td>$2000</td>
-                   <td>50200</td>
-                   <td>5%</td>
+                   <td>14</td>
+                   <td>twitter.com/tweet</td>
+                   <td>06-07-2020</td>
                    <td>$1500</td>
                  </tr>
    
@@ -567,11 +567,11 @@
                      </div>
                    </td>
                    <td>Coca Cola</td>
-                   <td>0001</td>
+                   <td>Business</td>
                    <td>Facebook</td>
-                   <td>$2000</td>
-                   <td>50200</td>
-                   <td>5%</td>
+                   <td>14</td>
+                   <td>twitter.com/tweet</td>
+                   <td>06-07-2020</td>
                    <td>$1500</td>
                  </tr>
                                        
@@ -606,7 +606,6 @@
   <script src="bootstrap-js/popper.js"></script>
   <script src="bootstrap-js/bootstrap.js"></script>
   <script src="nav.js"></script>
-  <script src="https://kit.fontawesome.com/d485ce5e89.js" crossorigin="anonymous"></script>
 
 </body>
 
