--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
     <!-- Big screens -->
     <header class="sticky-top">
-      <nav class="position-relative py-md-3">
+      <nav class="position-relative py-md-3 shadow-sm">
         <div class="container-fluid container-custom">
           <div class="d-flex justify-content-between align-items-center">
             <!-- Close button -->
@@ -268,7 +268,7 @@
   
             <div class="container">
   
-              <div class="px-3 row d-flex justify-content-between py-5 py-sm-2 border-bottom">
+              <div class="px-3 px-lg-0 row d-flex justify-content-between py-5 py-sm-2 border-bottom">
   
                 <div class="dropdown mr-3 px-0 mb-3 mb-lg-0">
                   <button class="btn btn-tetiary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -375,7 +375,7 @@
                   </div>
                 </div>
                 
-                <div class="dropdown mr-3 px-0 mb-3 mb-lg-0">
+                <div class="dropdown mr-3 px-0 mb-3 mb-xs-0">
                   <button class="btn btn-tetiary dropdown-toggle" type="button" id="dropdownMenuButton2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Client Name
                   </button>
