--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
   
             </div>
   
-            <div class="table-responsive">
+            <div class="table-responsive text-nowrap">
 
              <table class="table my-4">
                 
